--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -37326,5 +37326,29 @@
         "published": "Sat, 03 Jan 2026 08:41:42 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>India\u2019s IT ministry has issued a notice to X over the spread of AI-generated sexual content linked to Grok, citing failures in content moderation and AI safeguards.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-india-directs-x-curb-ai-generated-sexual-content/\">MeitY Sends Notice To X Over Grok Non-Consensually Editing, Removing Clothing, From Pictures</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-protect-your-iphone-or-android-device-from-spyware/",
+        "title": "How to Protect Your iPhone or Android Device From Spyware",
+        "link": "https://www.wired.com/story/how-to-protect-your-iphone-or-android-device-from-spyware/",
+        "published": "Sat, 03 Jan 2026 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Being targeted by sophisticated spyware is relatively rare, but experts say that everyone needs to stay vigilant as this dangerous malware continues to proliferate worldwide."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/external-affairs-minister-dr-s-jaishankar-launches-iitm-global-research-foundation",
+        "title": "External Affairs Minister Dr S Jaishankar launches IITM Global Research Foundation",
+        "link": "https://yourstory.com/2026/01/external-affairs-minister-dr-s-jaishankar-launches-iitm-global-research-foundation",
+        "published": "Sat, 03 Jan 2026 05:47:19 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The foundation has been conceived as a sustainable and scalable platform to take IIT Madras\u2019s academic, research and innovation strengths to the global stage."
+    },
+    {
+        "id": "https://inc42.com/buzz/deepinder-goyals-stand-for-blinkit-sparks-a-new-years-flashpoint/",
+        "title": "Deepinder Goyal\u2019s Stand For Blinkit Sparks A New Year\u2019s Flashpoint",
+        "link": "https://inc42.com/buzz/deepinder-goyals-stand-for-blinkit-sparks-a-new-years-flashpoint/",
+        "published": "Sat, 03 Jan 2026 09:50:41 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Bikhchandani stood out for making multiple posts backing him and the gig economy.\u00a0\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/zomato-gig-workers.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Eternal founder Deepinder Goyal took to social media on Thursday (January 1) to announce that Zomato and Blinkit were both&#8230;"
     }
 ]
