--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -37350,5 +37350,53 @@
         "published": "Sat, 03 Jan 2026 09:50:41 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Bikhchandani stood out for making multiple posts backing him and the gig economy.\u00a0\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/zomato-gig-workers.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Eternal founder Deepinder Goyal took to social media on Thursday (January 1) to announce that Zomato and Blinkit were both&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-manage-files-on-ios-and-android/",
+        "title": "How to Manage Files on iOS and Android",
+        "link": "https://www.wired.com/story/how-to-manage-files-on-ios-and-android/",
+        "published": "Sat, 03 Jan 2026 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "You have more access to your phone\u2019s file system than you may think."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-fitness-workout-apps/",
+        "title": "13 Best Fitness and Workout Apps for 2026, Tested & Reviewed",
+        "link": "https://www.wired.com/gallery/best-fitness-workout-apps/",
+        "published": "Sat, 03 Jan 2026 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "These fitness apps will help you turn New Year's resolutions into real results."
+    },
+    {
+        "id": "https://socialskillswisdom.com/",
+        "title": "How to Win Friends and Influence People: Unrevised Version",
+        "link": "https://socialskillswisdom.com/",
+        "published": "Sat, 03 Jan 2026 10:05:56 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46474833\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-we-test-smart-rings/",
+        "title": "How we test smart rings at ZDNET in 2026",
+        "link": "https://www.zdnet.com/article/how-we-test-smart-rings/",
+        "published": "Sat, 03 Jan 2026 11:00:46 GMT",
+        "source": "Latest news",
+        "summary": "From Oura to RingConn, here's how we test and rank the latest smart rings on the market."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/zappfresh-acquires-majority-stake-avyom-foodtech",
+        "title": "Zappfresh acquires majority stake in Avyom Foodtech",
+        "link": "https://yourstory.com/2026/01/zappfresh-acquires-majority-stake-avyom-foodtech",
+        "published": "Fri, 02 Jan 2026 13:39:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The deal will be carried out through a cash infusion of approximately Rs 7.5 crore by DSM Fresh Foods, which operates under the brand Zappfresh. The acquisition will also help it expand into overseas export markets."
+    },
+    {
+        "id": "https://inc42.com/buzz/foxtales-fy25-loss-widens-33-to-inr-73-cr/",
+        "title": "Foxtale\u2019s FY25 Loss Widens 33% To INR 73 Cr",
+        "link": "https://inc42.com/buzz/foxtales-fy25-loss-widens-33-to-inr-73-cr/",
+        "published": "Sat, 03 Jan 2026 10:58:17 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"foxtale FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ftr-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />D2C beauty and skincare brand Foxtale\u2019s net loss widened 32.5% to INR 72.7 Cr in the financial year ended March&#8230;"
     }
 ]
