--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -37398,5 +37398,69 @@
         "published": "Sat, 03 Jan 2026 10:58:17 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"foxtale FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ftr-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />D2C beauty and skincare brand Foxtale\u2019s net loss widened 32.5% to INR 72.7 Cr in the financial year ended March&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/handy-free-speech-to-text-app/",
+        "title": "Stop Using Your Keyboard and Start Using Handy, a Free Speech-to-Text App",
+        "link": "https://www.wired.com/story/handy-free-speech-to-text-app/",
+        "published": "Sat, 03 Jan 2026 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "It\u2019s called Handy, and it uses AI models to accurately convert your speaking voice into text\u2014all for free."
+    },
+    {
+        "id": "https://www.wired.com/story/oura-whoop-blood-labs/",
+        "title": "Blood Feud: Oura\u2019s Health Panels Versus Whoop\u2019s Advanced Labs",
+        "link": "https://www.wired.com/story/oura-whoop-blood-labs/",
+        "published": "Sat, 03 Jan 2026 11:09:00 +0000",
+        "source": "WIRED",
+        "summary": "It\u2019s easier than ever to order your own blood draws, but direct-access testing won\u2019t replace a doctor."
+    },
+    {
+        "id": "https://www.engadget.com/ai/how-to-watch-the-bosch-ces-2026-press-conference-live-on-monday-130020396.html?src=rss",
+        "title": "How to watch the Bosch CES 2026 press conference live on Monday",
+        "link": "https://www.engadget.com/ai/how-to-watch-the-bosch-ces-2026-press-conference-live-on-monday-130020396.html?src=rss",
+        "published": "Sat, 03 Jan 2026 12:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>You might recognize Bosch as a home appliance name (thanks to its partnership with Siemens), but the German multinational brand's core business is really about providing the underlying technology and engineering that powers cars, homes and factories around the world. That focus is reflected at <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html\">CES 2026</a>, where much of what Bosch is unveiling is intended to be licensed"
+    },
+    {
+        "id": "https://vectorculture.substack.com/p/not-for-human-consumption",
+        "title": "Not for Human Consumption",
+        "link": "https://vectorculture.substack.com/p/not-for-human-consumption",
+        "published": "Sat, 03 Jan 2026 11:26:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46475376\">Comments</a>"
+    },
+    {
+        "id": "https://tallyai.money/",
+        "title": "Tally \u2013 A tool to help agents classify your bank transactions",
+        "link": "https://tallyai.money/",
+        "published": "Sat, 03 Jan 2026 11:02:33 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46475218\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/pilgrim-crosses-inr-400-cr-revenue-mark-in-fy25/",
+        "title": "Pilgrim Crosses INR 400 Cr Revenue Mark In FY25",
+        "link": "https://inc42.com/buzz/pilgrim-crosses-inr-400-cr-revenue-mark-in-fy25/",
+        "published": "Sat, 03 Jan 2026 11:54:13 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Pilgrim Crosses INR 400 Cr Revenue Mark In FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Pilgrim-FY25-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />D2C personal care startup Pilgrim&#8217;s operating revenue soared 105% in fiscal year FY25 to INR 408.3 Cr from INR 198.7&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/indian-listed-new-age-tech-company-tracker-market-cap-revenue-more/",
+        "title": "Indian Listed New-Age Tech Company Tracker: Market Cap, Revenue & More",
+        "link": "https://inc42.com/features/indian-listed-new-age-tech-company-tracker-market-cap-revenue-more/",
+        "published": "Sat, 03 Jan 2026 11:27:59 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Indian Listed New-Age Tech Company Tracker: Market Cap, Revenue &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />For years, we at Inc42 have tracked the Indian tech startup ecosystem and seen it grow from a kid to&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-explained-sports-broadcasting-act-ott-platforms-outside-scope/",
+        "title": "Explained: India\u2019s Sports Broadcasting Act and Why OTT Platforms Remain Outside Its Scope",
+        "link": "https://www.medianama.com/2026/01/223-explained-sports-broadcasting-act-ott-platforms-outside-scope/",
+        "published": "Sat, 03 Jan 2026 11:48:12 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Read on to know what exactly India's Sports Broadcasting Act mandates in the country, and why OTT platforms still fall outside its purview.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-explained-sports-broadcasting-act-ott-platforms-outside-scope/\">Explained: India&#8217;s Sports Broadcasting Act and Why OTT Platforms Remain Outside Its Scope</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
