📚 Auto-update: News data refreshed - 2026-01-03 13:23 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37462,5 +37462,29 @@
         "published": "Sat, 03 Jan 2026 11:48:12 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Read on to know what exactly India's Sports Broadcasting Act mandates in the country, and why OTT platforms still fall outside its purview.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-explained-sports-broadcasting-act-ott-platforms-outside-scope/\">Explained: India&#8217;s Sports Broadcasting Act and Why OTT Platforms Remain Outside Its Scope</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/836627/ces-2026-news-gadgets-announcements",
+        "title": "CES 2026: all the news, gadgets, and innovations from the biggest tech show",
+        "link": "https://www.theverge.com/tech/836627/ces-2026-news-gadgets-announcements",
+        "published": "2026-01-03T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Hot on the heels of new year\u2019s celebrations, the annual Consumer Electronics Show will get underway in early January 2026. Once again, Las Vegas will host a sprawling sneak peek at the tech that will shape the industry throughout 2026. The Verge will be on the ground at CES 2026 covering the biggest announcements, press [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/framework-laptop-16/",
+        "title": "Framework Laptop 16 (RTX 5070) Review: A Dream Come True",
+        "link": "https://www.wired.com/review/framework-laptop-16/",
+        "published": "Sat, 03 Jan 2026 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "With upgradable graphics, the Framework Laptop 16 achieves what PC nerds have only ever dreamed of."
+    },
+    {
+        "id": "https://www.reuters.com/world/americas/loud-noises-heard-venezuela-capital-southern-area-without-electricity-2026-01-03/",
+        "title": "Trump says Venezuela's Maduro captured after strikes",
+        "link": "https://www.reuters.com/world/americas/loud-noises-heard-venezuela-capital-southern-area-without-electricity-2026-01-03/",
+        "published": "Sat, 03 Jan 2026 06:35:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46473348\">Comments</a>"
     }
 ]
