📚 Auto-update: News data refreshed - 2026-01-03 14:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37486,5 +37486,29 @@
         "published": "Sat, 03 Jan 2026 06:35:21 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46473348\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/852598/mui-board-smart-home-controller-matter",
+        "title": "This smart home controller is literally a piece of wood",
+        "link": "https://www.theverge.com/tech/852598/mui-board-smart-home-controller-matter",
+        "published": "2026-01-03T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "One of the fun parts of being a tech journalist for over a decade is that occasionally you get to watch a truly unique gadget go from concept to reality - and, eventually, into your living room. That's the case with the Mui Board, a smart home controller built into a piece of wood. The [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-big-january-conference-120000956.html?src=rss",
+        "title": "CES 2026: What to expect from tech's big January conference",
+        "link": "https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-big-january-conference-120000956.html?src=rss",
+        "published": "Sat, 03 Jan 2026 13:45:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The new year is upon us, and that means CES 2026 is imminent. The biggest tech trade show of the calendar comes with a bevy of new and notable announcements that set the tone for trends and expectations for the subsequent 12 months. The CES 2026 show floor is officially open from January 6 through 9, but the fun kicks off with events on Sunday January 4, followed by a host of press conferences on Monday. As always, product demos, announcements and networking will be happening at the Las Vegas"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/centre-warns-social-media-firms-of-legal-action-over-unlawful-content",
+        "title": "Centre warns social media firms of legal action over unlawful content",
+        "link": "https://yourstory.com/2026/01/centre-warns-social-media-firms-of-legal-action-over-unlawful-content",
+        "published": "Sat, 03 Jan 2026 07:20:59 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The Parliamentary Standing Committee on the Ministry of Information and Broadcasting has also called for greater accountability of social media and intermediary platforms in relation to fake content and news."
     }
 ]
