--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -37510,5 +37510,37 @@
         "published": "Sat, 03 Jan 2026 07:20:59 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The Parliamentary Standing Committee on the Ministry of Information and Broadcasting has also called for greater accountability of social media and intermediary platforms in relation to fake content and news."
+    },
+    {
+        "id": "https://www.theverge.com/streaming/853133/stranger-things-finale-theater-scene-report",
+        "title": "I went to the Stranger Things finale in theaters and the strangest thing happened",
+        "link": "https://www.theverge.com/streaming/853133/stranger-things-finale-theater-scene-report",
+        "published": "2026-01-03T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The parking lot was packed. That's the first Strange Thing. A little background. Just about every mall is struggling now, but the Neshaminy Mall in Bensalem, Pennsylvania is more or less comatose. As Defector's Dan McQuade, a lifelong Pennsylvanian and mall fan, wrote in his fond remembrance of the shopping center, the once bustling complex [&#8230;]"
+    },
+    {
+        "id": "https://hleb.dev/post/x-clacks-overhead/",
+        "title": "X-Clacks-Overhead",
+        "link": "https://hleb.dev/post/x-clacks-overhead/",
+        "published": "Sat, 03 Jan 2026 11:37:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46475437\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/eternal-ceo-deepinder-goyal-enters-new-arena-of-debate-capitalism-class-divide-and-gig-economy/articleshow/126323783.cms",
+        "title": "Eternal CEO Deepinder Goyal enters new arena of debate: Capitalism, class divide and gig economy",
+        "link": "https://economictimes.indiatimes.com/tech/technology/eternal-ceo-deepinder-goyal-enters-new-arena-of-debate-capitalism-class-divide-and-gig-economy/articleshow/126323783.cms",
+        "published": "Sat, 03 Jan 2026 20:08:31 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Amid backlash over recent gig worker strikes, Eternal CEO Deepinder Goyal sparked a wider debate by defending capitalism and the gig economy on social media. He argued that wealth must be created before it can be fairly shared, framing capitalism as the engine that drives value and growth. His remarks on class divide and labour drew strong reactions, winning support from some founders and investors while attracting criticism from workers\u2019 advocates and politicians."
+    },
+    {
+        "id": "https://inc42.com/buzz/nazara-ola-electric-lead-gains-in-a-choppy-week-for-new-age-tech-stocks/",
+        "title": "Nazara, Ola Electric Lead Gains In A Choppy Week For New-Age Tech Stocks",
+        "link": "https://inc42.com/buzz/nazara-ola-electric-lead-gains-in-a-choppy-week-for-new-age-tech-stocks/",
+        "published": "Sat, 03 Jan 2026 14:47:23 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Nazara, Ola Electric Lead Gains In A Choppy Week For New-Age Tech Stocks\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Tech-Stocks-Jan-03-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The year 2025 proved to be a record one for startups, with 18 new-age tech companies getting listed on the&#8230;"
     }
 ]
