📚 Auto-update: News data refreshed - 2026-01-03 16:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37542,5 +37542,21 @@
         "published": "Sat, 03 Jan 2026 14:47:23 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Nazara, Ola Electric Lead Gains In A Choppy Week For New-Age Tech Stocks\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Tech-Stocks-Jan-03-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The year 2025 proved to be a record one for startups, with 18 new-age tech companies getting listed on the&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/us-invaded-venezuela-and-captured-nicolas-maduro-chatgpt-disagrees/",
+        "title": "The US Invaded Venezuela and Captured Nicol\u00e1s Maduro. ChatGPT Disagrees",
+        "link": "https://www.wired.com/story/us-invaded-venezuela-and-captured-nicolas-maduro-chatgpt-disagrees/",
+        "published": "Sat, 03 Jan 2026 16:03:15 +0000",
+        "source": "WIRED",
+        "summary": "Some AI chatbots have a surprisingly good handle on breaking news. Others decidedly don't."
+    },
+    {
+        "id": "https://www.corviont.com/",
+        "title": "Show HN: Offline tiles and routing and geocoding in one Docker Compose stack",
+        "link": "https://www.corviont.com/",
+        "published": "Sat, 03 Jan 2026 15:55:16 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46478061\">Comments</a>"
     }
 ]
