📚 Auto-update: News data refreshed - 2026-01-03 17:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37558,5 +37558,37 @@
         "published": "Sat, 03 Jan 2026 15:55:16 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46478061\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/853151/meta-quest-3s-apple-airtag-steam-winter-sale-deal",
+        "title": "Meta\u2019s Quest 3S is still $50 off and comes with a $50 gift card",
+        "link": "https://www.theverge.com/gadgets/853151/meta-quest-3s-apple-airtag-steam-winter-sale-deal",
+        "published": "2026-01-03T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "We posted a couple of times about Meta\u2019s Quest 3S during the holidays. The virtual reality headset that typically sold for $299.99 was \u2014 and still is \u2014 available for $249.99. Better yet, you can get in on a promotion at Amazon that includes a $50 digital account credit with purchase. You can find a [&#8230;]"
+    },
+    {
+        "id": "https://c3-lang.org",
+        "title": "The C3 Programming Language",
+        "link": "https://c3-lang.org",
+        "published": "Sat, 03 Jan 2026 16:41:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46478647\">Comments</a>"
+    },
+    {
+        "id": "https://refactoringenglish.com/blog/2025-hn-top-5/",
+        "title": "The Most Popular Blogs of Hacker News in 2025",
+        "link": "https://refactoringenglish.com/blog/2025-hn-top-5/",
+        "published": "Sat, 03 Jan 2026 16:20:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46478377\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/india-nye-2026-upi-transactions-spending-knight-fintech-arya-ag-funding-tesla-byd-sales",
+        "title": "India spent Rs 1.1 lakh Cr on NYE; Knight FinTech raises $23.6M",
+        "link": "https://yourstory.com/2026/01/india-nye-2026-upi-transactions-spending-knight-fintech-arya-ag-funding-tesla-byd-sales",
+        "published": "Sat, 03 Jan 2026 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Meanwhile, the Ministry of Electronics and IT approved 22 new proposals under the Electronics Components Manufacturing Scheme, with a projected investment of Rs 41,863 crore and production of Rs 2,58,152 crore. Here\u2019s what it entails."
     }
 ]
