📚 Auto-update: News data refreshed - 2026-01-03 18:15 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37590,5 +37590,29 @@
         "published": "Sat, 03 Jan 2026 02:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Meanwhile, the Ministry of Electronics and IT approved 22 new proposals under the Electronics Components Manufacturing Scheme, with a projected investment of Rs 41,863 crore and production of Rs 2,58,152 crore. Here\u2019s what it entails."
+    },
+    {
+        "id": "https://www.engadget.com/cybersecurity/california-introduces-a-one-stop-shop-to-delete-your-online-data-footprint-173102064.html?src=rss",
+        "title": "California introduces a one-stop shop to delete your online data footprint",
+        "link": "https://www.engadget.com/cybersecurity/california-introduces-a-one-stop-shop-to-delete-your-online-data-footprint-173102064.html?src=rss",
+        "published": "Sat, 03 Jan 2026 17:31:02 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Californians can now put a stop to their personal data being sold around on an online trading floor, thanks to a new free tool. On January 1, the state launched its Delete Request and Opt-out Platform, shortened to <a class=\"no-affiliate-link\" href=\"https://consumer.drop.privacy.ca.gov/\">DROP</a>, that allows residents to request to delete all of their personal information online that's been harvested by data brokers.</p>\n<p>According to the <a class=\"no-affiliate-link\" href=\"https://www.enga"
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-gram-pro-2026-ces/",
+        "title": "LG's 2026 Gram laptops look to dethrone the MacBook Air with this new build material",
+        "link": "https://www.zdnet.com/article/lg-gram-pro-2026-ces/",
+        "published": "Sat, 03 Jan 2026 17:57:00 GMT",
+        "source": "Latest news",
+        "summary": "LG previewed its next-gen Gram models, combining updated hardware and vivid screens with a newly developed lightweight material."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ces-2026-live-updates-1-3-26/",
+        "title": "CES 2026 live updates: Latest news on TVs, smart glasses, phones, and more we've seen so far",
+        "link": "https://www.zdnet.com/article/ces-2026-live-updates-1-3-26/",
+        "published": "Sat, 03 Jan 2026 17:56:00 GMT",
+        "source": "Latest news",
+        "summary": "The world's biggest technology trade show is just days away, but we're already seeing several companies make their pitch for 2026."
     }
 ]
