📚 Auto-update: News data refreshed - 2026-01-03 19:08 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37614,5 +37614,29 @@
         "published": "Sat, 03 Jan 2026 17:56:00 GMT",
         "source": "Latest news",
         "summary": "The world's biggest technology trade show is just days away, but we're already seeing several companies make their pitch for 2026."
+    },
+    {
+        "id": "https://www.wired.com/story/disinformation-floods-social-media-after-nicolas-maduros-capture/",
+        "title": "Disinformation Floods Social Media After Nicol\u00e1s Maduro's Capture",
+        "link": "https://www.wired.com/story/disinformation-floods-social-media-after-nicolas-maduros-capture/",
+        "published": "Sat, 03 Jan 2026 18:14:47 +0000",
+        "source": "WIRED",
+        "summary": "From seemingly AI-generated videos to repurposed old footage, TikTok, Instagram, and X did little to stop the onslaught of misleading posts in the wake of the US invasion of Venezuela."
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/volkswagen-is-bringing-physical-buttons-back-to-the-dashboard-with-the-id-polo-ev-190246116.html?src=rss",
+        "title": "Volkswagen is bringing physical buttons back to the dashboard with the ID. Polo EV",
+        "link": "https://www.engadget.com/transportation/evs/volkswagen-is-bringing-physical-buttons-back-to-the-dashboard-with-the-id-polo-ev-190246116.html?src=rss",
+        "published": "Sat, 03 Jan 2026 19:02:46 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>We could be witnessing the start of the renaissance for <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/volkswagen-drivers-want-more-physical-buttons-instead-of-touch-controls-044931087.html\">real buttons in cars</a>, courtesy of Volkswagen's <a class=\"no-affiliate-link\" href=\"https://www.volkswagen-newsroom.com/en/press-releases/volkswagen-unveils-a-new-cockpit-generation-debuting-with-the-all-new-id-polo-20056\">ID. Polo</a>. The German automaker unveiled the interior of its upco"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/how-to-watch-the-hyundai-ces-2026-presentation-live-190051072.html?src=rss",
+        "title": "How to watch the Hyundai CES 2026 presentation live",
+        "link": "https://www.engadget.com/transportation/how-to-watch-the-hyundai-ces-2026-presentation-live-190051072.html?src=rss",
+        "published": "Sat, 03 Jan 2026 19:00:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/2a54c910-e5bb-11f0-9fd7-0fe99fe4214d\" style=\"height: 1333px; width: 2000px;\" /><figcaption>A look at Hyundai's Holographic Windshield Display. (Hyundai)</figcaption></figure>\n<p>CES has long felt like a full-on auto show, but the car-centric energy seems somewhat muted at <a href=\"https://www.engadget.com/big-tech/ces-2026-preview-what-were-expecting-from-techs-biggest-conference-in-january-120000768.html\">CES 2026</a>. Sure,"
     }
 ]
