--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -37638,5 +37638,21 @@
         "published": "Sat, 03 Jan 2026 19:00:37 +0000",
         "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
         "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/2a54c910-e5bb-11f0-9fd7-0fe99fe4214d\" style=\"height: 1333px; width: 2000px;\" /><figcaption>A look at Hyundai's Holographic Windshield Display. (Hyundai)</figcaption></figure>\n<p>CES has long felt like a full-on auto show, but the car-centric energy seems somewhat muted at <a href=\"https://www.engadget.com/big-tech/ces-2026-preview-what-were-expecting-from-techs-biggest-conference-in-january-120000768.html\">CES 2026</a>. Sure,"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/03/bitfinex-hacker-ilya-lichtenstein-credits-trump-for-early-release-from-prison/",
+        "title": "Bitfinex hacker Ilya Lichtenstein credits Trump for early release from prison",
+        "link": "https://techcrunch.com/2026/01/03/bitfinex-hacker-ilya-lichtenstein-credits-trump-for-early-release-from-prison/",
+        "published": "Sat, 03 Jan 2026 19:48:23 +0000",
+        "source": "TechCrunch",
+        "summary": "Ilya Lichtenstein, who pled guilty to money laundering charges tied to his role in the massive hack of crypto exchange Bitfinex, has apparently been released early from prison."
+    },
+    {
+        "id": "https://www.neowin.net/news/report-microsoft-quietly-kills-official-way-to-activate-windows-1110-without-internet/#google_vignette",
+        "title": "Microsoft kills official way to activate Windows 11/10 without internet",
+        "link": "https://www.neowin.net/news/report-microsoft-quietly-kills-official-way-to-activate-windows-1110-without-internet/#google_vignette",
+        "published": "Sat, 03 Jan 2026 18:53:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46480156\">Comments</a>"
     }
 ]
