📚 Auto-update: News data refreshed - 2026-01-03 21:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37654,5 +37654,21 @@
         "published": "Sat, 03 Jan 2026 18:53:10 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46480156\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/853765/someone-made-a-ton-of-money-betting-on-maduros-capture",
+        "title": "Someone made a ton of money betting on Maduro\u2019s capture",
+        "link": "https://www.theverge.com/news/853765/someone-made-a-ton-of-money-betting-on-maduros-capture",
+        "published": "2026-01-03T15:44:22-05:00",
+        "source": "The Verge",
+        "summary": "Shortly before the US military launched an attack on Venezuela and captured President Nicol&#225;s Maduro, an account on Polymarket made some very suspiciously timed investments. The prediction market had been running bets on when or if Maduro would be removed from power, with prices for \"out by January 31, 2026\" as low as $0.07 late [&#8230;]"
+    },
+    {
+        "id": "https://www.sirius-db.com/",
+        "title": "Sirius DB",
+        "link": "https://www.sirius-db.com/",
+        "published": "Wed, 31 Dec 2025 05:54:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46441781\">Comments</a>"
     }
 ]
