📚 Auto-update: News data refreshed - 2026-01-03 22:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37670,5 +37670,21 @@
         "published": "Wed, 31 Dec 2025 05:54:06 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46441781\">Comments</a>"
+    },
+    {
+        "id": "https://stetsonblake.com/%2425+Walmart+Phone+for+Hackers",
+        "title": "Show HN: Vibe Coding a static site on a $25 Walmart Phone",
+        "link": "https://stetsonblake.com/%2425+Walmart+Phone+for+Hackers",
+        "published": "Sat, 03 Jan 2026 19:39:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46480677\">Comments</a>"
+    },
+    {
+        "id": "https://www.science.org/content/article/deep-sea-mining-race-ramps-mission-will-assess-whether-ecosystems-recover-afterward",
+        "title": "As deep-sea mining race ramps up, mission will assess whether ecosystems recover",
+        "link": "https://www.science.org/content/article/deep-sea-mining-race-ramps-mission-will-assess-whether-ecosystems-recover-afterward",
+        "published": "Sat, 03 Jan 2026 19:14:39 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46480373\">Comments</a>"
     }
 ]
