📚 Auto-update: News data refreshed - 2026-01-04 00:59 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -37734,5 +37734,29 @@
         "published": "Sat, 03 Jan 2026 23:01:57 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46482642\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/03/tech-billionaires-cashed-out-16-billion-in-2025-as-stocks-soared/",
+        "title": "Tech billionaires cashed out $16 billion in 2025 as stocks soared",
+        "link": "https://techcrunch.com/2026/01/03/tech-billionaires-cashed-out-16-billion-in-2025-as-stocks-soared/",
+        "published": "Sat, 03 Jan 2026 23:45:07 +0000",
+        "source": "TechCrunch",
+        "summary": "Jeff Bezos led the way. The Amazon founder sold 25 million shares for $5.7 billion in June and July, right around the time he was getting hitched to Lauren Sanchez in Venice."
+    },
+    {
+        "id": "https://docs.swifdroid.com/app/",
+        "title": "Swift on Android: Full Native App Development Now Possible",
+        "link": "https://docs.swifdroid.com/app/",
+        "published": "Sat, 03 Jan 2026 23:39:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46483023\">Comments</a>"
+    },
+    {
+        "id": "https://nik.art/the-suck-is-why-were-here/",
+        "title": "The Suck Is Why We're Here",
+        "link": "https://nik.art/the-suck-is-why-were-here/",
+        "published": "Sat, 03 Jan 2026 23:24:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46482877\">Comments</a>"
     }
 ]
